<resources>
    <string name="app_name">Movies</string>
    <string name="back_place">Back</string>
    <string name="avengers_end_game">Avengers:\nEnd Game</string>
    <string name="age">13+</string>
    <string name="genre">Action, Adventure, Fantasy</string>
    <string name="reviews">%d REVIEWS</string>
    <string name="storyline">Storyline</string>
    <string name="overview">Storyline After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="movies_list">Movies list</string>
    <string name="avengers_end_game_list_title">Avengers: End Game</string>
    <string name="movie_minutes">%d MIN</string>
    <string name="pg_age">%d+</string>
    <string name="error_try_again_later">Error. Try again later</string>
    <string name="try_again">try_again</string>
    <string name="search_hint">Search movie</string>
    <string name="no_results">Empty movie list</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">Movies</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_movies">Favorite movies</string>
    <string name="no_favorite_movies">No favorite movies</string>
    <string name="home">Home</string>
</resources>